5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1752_1524.log
== TEST (2019-05-16 17:36:04) 
-- CODE:
qi = int(input())
qx = int(input())

calculo = 0
i = 1
t = 1
while(qi>0):
	qy = int(input())
	qi = ((qi+qx) - qy)
	
print(qi)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qy = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:01) 
-- CODE:
qi = int(input())
qx = int(input())

calculo = 1
i = 1
t = 1
while(qi>0):
	qy = int(input())
	calculo = calculo * ((qi+qx) - qy)
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qy = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:27) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
i = 1
t = 1
calculo = (qi + qx) - qy
while(calculo>0):
	qy = int(input())
	calculo = ((qi+qx) - qy) - calculo
	i = i + 1
	t = t + 1
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qy = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:45) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
i = 1
t = 1
calculo = (qi + qx) - qy
while(calculo>0):
	calculo = ((qi+qx) - qy) - calculo
	i = i + 1
	t = t + 1
print(calculo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qy = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:21) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
i = 1
t = 1
calculo = (qi + qx) - qy
while(calculo>0):
	calculo = ((qi+qx) - qy) - calculo
	i = i + 1
	t = t + 1
print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:41) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
i = 1
t = 1
calculo = (qi + qx) - qy
while(calculo>0):
	calculo = calculo + ((qi+qx) - qy) 
	i = i + 1
	t = t + 1
print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:51) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
i = 1
t = 1
calculo = (qi + qx) - qy
while(calculo>0):
	calculo = calculo + ((qi+qx) - qy) 
	i = i + 1
	t = t + 1
print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:25) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
a = 0

t = 1

while(a>0):
	a = a + ((qi + qx) - qy)
	
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:51:34) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
a = 0

t = 1

while(a>0):
	a = a + ((qi + qx) - qy)
	
	t = t + 1
print(t)
-- EXECUTION TIME:
0.187729
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
1
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:20) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
a = qi + qx
calculo = 0 
t = 1

while(calculo2>0):
	calculo = calculo + (a - qy)
	calculo2 = calculo + (qx-qy)
	t = t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(calculo2>0):
NameError: name 'calculo2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:59) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
a = qi + qx
calculo = 0 
t = 1
calculo2 = 0 
while(calculo2>0):
	calculo = calculo + (a - qy)
	calculo2 = calculo2 + calculo + (qx-qy)
	t = t + 1
print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:06) 
-- CODE:
qi = int(input())
qx = int(input())
qy = int(input())
a = qi + qx
calculo = 0 
t = 1
calculo2 = 0 
while(calculo2>0):
	calculo = calculo + (a - qy)
	calculo2 = calculo2 + calculo + (qx-qy)
	t = t + 1
print(t)
-- EXECUTION TIME:
0.15558
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
1
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
